--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>HW-Wireframe Assignment</title>
+
+		<!-- Linking CSS -->
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
+
 <body>
+
+<header>
+ 
+    Header
+ 
+</header> 
+<p></p>
+<nav>
+nav
+
+</nav>
+<p></p>
+
+<section>
+section
+	<article class="outsideArticle">
+		article
+		<article >
+		
+		 <header class="inArticleHeader">
+		<strong>h1,h2,h3</strong>
+			<!-- <h1>h1</h1> <h2>h2</h2> <h3>h3</h3>  -->
+   		</header>
+
+		</article>
+		<br>
+		<p></p>
+		<article class="floatArticle">
+				p
+		</article>
+
+	</article>
+
+</section>
+
+
+<aside>
+	aside
+</aside>
+<p></p>
+<footer>
+	footer
+</footer>
 
 </body>
 </html>
